<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">单词默写</string>
    <string name="textbooks">教材</string>
    <string name="units">单元</string>
    <string name="words">单词</string>
    <string name="dictation">默写</string>
    <string name="home">首页</string>
    <string name="add_textbook">添加教材</string>
    <string name="edit_textbook">编辑教材</string>
    <string name="delete_textbook">删除教材</string>
    <string name="add_unit">添加单元</string>
    <string name="edit_unit">编辑单元</string>
    <string name="delete_unit">删除单元</string>
    <string name="add_word">添加单词</string>
    <string name="edit_word">编辑单词</string>
    <string name="delete_word">删除单词</string>
    <string name="start_dictation">开始默写</string>
    <string name="import_words">导入单词</string>
    <string name="export_words">导出单词</string>
    <string name="name">名称</string>
    <string name="description">描述</string>
    <string name="english">英文</string>
    <string name="chinese">中文</string>
    <string name="phonetic">音标</string>
    <string name="part_of_speech">词性</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确认删除</string>
    <string name="confirm_delete_message">确定要删除吗？</string>
    <string name="no_data">暂无数据</string>
    <string name="stats_summary">统计概览</string>
    <string name="total_textbooks">教材总数</string>
    <string name="total_units">单元总数</string>
    <string name="total_words">单词总数</string>
    <string name="dictation_preview">默写预览</string>
    <string name="zh_to_en">中译英</string>
    <string name="en_to_zh">英译中</string>
    <string name="shuffle">随机排序</string>
    <string name="show_phonetic">显示音标</string>
    <string name="previous">上一题</string>
    <string name="next">下一题</string>
    <string name="submit">提交</string>
    <string name="answer">答案</string>
    <string name="show_answer">显示答案</string>
</resources>
